--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.9",
     "mosha-vue-toastify": "^1.0.23",
     "roboto-fontface": "*",
@@ -34,7 +36,6 @@
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.4.0",
-    "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.4.0"
   }
 }
