--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.9",
+    "html2canvas": "^1.4.1",
     "mosha-vue-toastify": "^1.0.23",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
