--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "mosha-vue-toastify": "^1.0.23",
     "roboto-fontface": "*",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.31",
     "vuetify": "^3.7.6",
     "vuex": "^4.0.2"
