--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
@@ -15,7 +16,11 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.9",
     "html2canvas": "^1.4.1",
+    "js-audio-recorder": "^1.0.7",
+    "lamejs": "^1.2.0",
     "mosha-vue-toastify": "^1.0.23",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "roboto-fontface": "*",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.31",
@@ -32,12 +37,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-vue": "^9.30.0",
+    "less": "^4.2.2",
     "sass": "1.77.8",
     "sass-embedded": "^1.77.8",
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
     "vite": "^5.4.0",
+    "vite-plugin-require-transform": "^1.0.21",
     "vue-router": "^4.4.0"
   }
 }
