--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@mdi/font": "^7.4.47",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.29.1",
