--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.9",
@@ -22,10 +23,12 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "roboto-fontface": "*",
+    "vconsole": "^3.15.1",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.31",
     "vuetify": "^3.7.6",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "web-audio-recorder-js": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
